fixing user auth token bugs

--- a/.env
+++ b/.env
@@ -1,4 +1,14 @@
+# LOCALES
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
 
-VUE_APP_API_URL=https://dev-portal.innocalls.com/customer/api/v1/
+# URLS
+VUE_APP_API_URL=https://dev-portal.innocalls.com/customer/api/v1/customers
+VUE_APP_AUTH_URL=https://dev-portal.innocalls.com/auth/customer
+
+# SECRETS
+VUE_APP_CLIENT_SECRET=FRELxF2uEOzL9KjAEeiaphaKX1aE36zwP2HDIyey
+VUE_APP_CLIENT_ID=2
+VUE_APP_GRANT_TYPE=password
+VUE_APP_SERVICE_PROVIDER=0698a6fd-60f8-4e4f-9804-e10a962f6030
+VUE_APP_SUPPORT_DEPARTMENT_ID=459680000000006907
