--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
+    "@vueuse/motion": "^2.0.0-beta.4",
     "ant-design-vue": "^2.2.8",
     "axios": "^0.24.0",
     "babel-plugin-import": "^1.13.3",
