--- a/.env
+++ b/.env
@@ -4,8 +4,9 @@ VUE_APP_I18N_DIR=ltr
 VUE_APP_I18N_FALLBACK_LOCALE=en
 
 # URLS
-VUE_APP_API_URL=https://dev-portal.innocalls.com/customer/api/v1/customers
-VUE_APP_AUTH_URL=https://dev-portal.innocalls.com/auth/customer
+VUE_APP_BASE_URL=https://api.live.twasal.co:8085
+# VUE_APP_API_URL=https://dev-portal.innocalls.com/customer/api/v1/customers
+# VUE_APP_AUTH_URL=https://api.live.twasal.co:8085/auth/customer
 
 # SECRETS
 VUE_APP_CLIENT_SECRET=FRELxF2uEOzL9KjAEeiaphaKX1aE36zwP2HDIyey
