--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "ant-design-vue": "^2.2.8",
     "axios": "^0.24.0",
     "babel-plugin-import": "^1.13.3",
+    "chart.js": "^3.6.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-chart-3": "^3.0.4",
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
