--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-import": "^1.13.3",
     "chart.js": "^3.6.2",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "vue": "^3.0.0",
     "vue-chart-3": "^3.0.4",
     "vue-i18n": "^9.1.0",
